# nano-banana-image-translate

./: .env.sample  .gitignore  LICENSE  README.md  gcs_utils.py  main.py  prompt.py  pyproject.toml  requirements.txt  translate.py
